deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
      - name: dockersecret
      containers:
      - name: api
        image: -----                  #App-image
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          allowPrivilegeEscalation: true
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: data-volume
          mountPath: /app/data
        command: ["python", "api_runner.py"]
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: app-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort   # or LoadBalancer if on cloud
