ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.app.com
      secretName: runevault-tls
  rules:
    - host: api.app.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-service
                port: 
                  number: 8000
